Version Changes for Hypermail
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

 Peter McCluskey (Feb 19 2001) applied patches from "W. Tasin" <tasin@fhm.edu>
 - some changes in the german translation
 - if a Content-Base is found set content=CONTENT_IGNORE because it is on
  another server and it would never be parsed well inside the mail...
  (this is more a workaround than a good patch... a better way would be to
  include this to every link inside the content... to show up also this
  external site... but I think it is an easy way to handle this problem)
 - add NONE as value for set_mailcommand, so "New Message" will not be shown
 - improve handling of inline attachments after signature.
 - prevent "(no email)" in emailaddr from becoming mailto.
 - add option set_bodymailcommand to configure mailto's other than one
  used in MSG_NEW_MESSAGE or MSG_REPLY.
 - changes to makemailcommand to prevent (nil) from showing when no Subject:.

 Daniel Stenberg (Jan 3, 2001)
 - Added checks for more functions in the configure script

 Ashley M. Kirchner (May 31, 2000)
 - I converted all uppercase HTML tags to lowercase in the main hypermail
   base source.  Stuff that got contributed (under the contrib directory)
   were not touched.  I'm going to leave those for their respective
   contributors to change.

 Daniel Stenberg (daniel@haxx.nu) (May 25, 2000)
 - Added 'spamprotect' as a new flag. It replaces @-letters with "_at_" to
   confuse spam-email-robots a bit.

 - Found a terrible bug when an URL contains a @-letter, since it'll first
   become <href>-tagged and then <mailto>-converted... :-/

 - Added https:// as a recognized URL type (deja-vu, didn't I do this before?)

 - Corrected the alternative parser not being reset at the end of all mails

 Daniel Stenberg (daniel@haxx.nu) (May 23, 2000)
 - Corrected the output on %> appearences in the template files

 - Applied the beauty fix supplied by Darryl Lee <lee@darryl.com>

 Daniel Stenberg (Apr 10, 2000)